# PythonProject5

./: .gitignore  README.md  pyproject.toml
allure-results/: 008ceb20-cdf4-4905-abf2-3216473cb0f0-attachment.txt  009e5510-28b5-4570-98e1-28d254320243-attachment.json  009f6ecf-b069-46d2-9f32-26d91ae8192f-container.json  00fae9fc-23cf-48c3-80c8-afa651c192b8-result.json  01994c10-1b24-4691-815d-8be0152756ef-container.json  02127ac2-1dea-40f5-9e7d-056050d0929a-container.json  036de83c-d864-47ae-b8fb-94e1d6b1bb15-attachment.json  0386ebed-adec-4a09-98bc-5ec550704530-result.json  03906fc6-582c-4d96-a84d-4fb7a470c1c7-result.json  039d8627-5418-4363-ac75-ea617a59e7c0-container.json  043f8439-c7d0-4b6d-8681-c02c23fbaa19-attachment.txt  04aeb70c-f349-4eec-a2a8-e71ddc1cd473-attachment.txt  04dc6f90-8c5c-4a03-ac4a-f6412b450cf2-container.json  05208a36-225c-44f4-b3c3-7f7b594dfb18-attachment.json  05b681e7-2743-41a6-9898-8fd9ad6f597c-container.json  0607ddee-4694-46c7-b080-c124b70eae94-container.json  060cd110-89c0-4ae9-89d5-86b50ba6bdbb-container.json  06b77f07-f09a-4140-a69c-a26312cd3216-attachment.txt  06e5e268-9679-4ccb-b491-25662aceceed-result.json  071cef9a-4ec1-43aa-a3a8-a9d686041114-container.json  0747435e-2f86-4c8e-be8b-31aec7fa31f2-container.json  07e7dbcd-c503-4f23-b0d5-90e6b1c01185-result.json  07fc3dc6-dc84-4cae-94fc-34d590c98f72-result.json  08d4b203-fcdd-4b44-9736-4384f17e91b6-attachment.json  0996c4dc-8d6f-4cb4-a24a-b80c4553205e-result.json  0b42208a-3777-40c9-bac0-844a2a9901a0-container.json  0bae12f6-fdb2-4d56-8ed9-064b8186bca4-container.json  (+611 more)
tests/: conftest.py  (+4 more)
(+12 files in other folders)
